--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,12 @@ on:
     tags:
       - 'v*'
 
+env:
+  REGISTRY: ghcr.io
+
 permissions:
   contents: write
+  packages: write
 
 jobs:
   publish-github:
@@ -115,3 +119,55 @@ jobs:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
           cargo publish
+
+  build-docker:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image-repo: ${{ github.repository }}
+            dockerfile: Dockerfile
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Set up QEMU needed for Docker
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          logout: false
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+      - id: readme
+        name: Read README
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: README.md
+      - name: Login to Docker hub
+        uses: docker/login-action@v2
+        with:
+          logout: false
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+      - id: meta
+        name: Docker metadata
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ env.REGISTRY }}/${{ matrix.image-repo }}
+          labels: |
+            org.opencontainers.image.description: ${{ steps.readme.outputs.content }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          file: ${{ matrix.dockerfile }}
+          labels: ${{ steps.meta.outputs.labels }}
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ matrix.image-repo }}:${{ github.head_ref || github.ref_name }}
+            ${{ matrix.image-repo }}:${{ github.head_ref || github.ref_name }}
